refactor[#66]: layer 간 의존 관계 개선