@@ -1,8 +1,9 @@
 package com.foodkeeper.foodkeeperserver.recipe.implement;
 
-import com.foodkeeper.foodkeeperserver.recipe.business.request.ClovaRequest;
-import com.foodkeeper.foodkeeperserver.recipe.business.response.ClovaResponse;
-import com.foodkeeper.foodkeeperserver.recipe.controller.v1.ClovaClient;
+import com.foodkeeper.foodkeeperserver.recipe.dataaccess.ClovaClient;
+import com.foodkeeper.foodkeeperserver.recipe.domain.Recipe;
+import com.foodkeeper.foodkeeperserver.recipe.domain.clova.ClovaRequest;
+import com.foodkeeper.foodkeeperserver.recipe.domain.clova.ClovaResponse;
 import com.foodkeeper.foodkeeperserver.support.exception.AppException;
 import com.foodkeeper.foodkeeperserver.support.exception.ErrorType;
 import jakarta.annotation.PostConstruct;
@@ -12,15 +13,18 @@ import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StreamUtils;
+import tools.jackson.databind.ObjectMapper;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
-public class ClovaService {
+public class AiRecipeRecommender {
+
+    private static final String BEARER = "Bearer ";
 
     @Value("${clova.api-key}")
     private String apiKey;
@@ -29,7 +33,9 @@ public class ClovaService {
     private Resource systemPromptResource;
 
     private String systemPrompt;
+
     private final ClovaClient clovaClient;
+    private final ObjectMapper objectMapper;
 
     // 텍스트 파일 빈 생성 시 메모리에 저장
     @PostConstruct
@@ -42,32 +48,33 @@ public class ClovaService {
         }
     }
 
-    public String getRecipeRecommendation(List<String> ingredients, List<String> excludedMenus) throws IOException {
-
+    public Recipe getRecipeRecommendation(List<String> ingredients, List<String> excludedMenus) {
         String userPrompt = removeDuplicateFood(ingredients, excludedMenus);
 
-        ClovaRequest request = ClovaRequest.createPrompt(systemPrompt, userPrompt);
+        ClovaRequest clovaRequest = ClovaRequest.createPrompt(systemPrompt, userPrompt);
+        ClovaResponse clovaResponse = clovaClient.getRecipe(BEARER + apiKey, clovaRequest);
 
-        ClovaResponse clovaResponse = clovaClient.getRecipe("Bearer " + apiKey, request);
-        return clovaResponse.getContent();
+        return objectMapper.readValue(clovaResponse.getContent(), Recipe.class);
     }
 
     private String removeDuplicateFood(List<String> ingredients, List<String> excludedMenus) {
-        StringBuilder promptBuilder = new StringBuilder();
-
         String ingredientsStr = String.join(", ", ingredients);
-        promptBuilder.append(String.format("현재 가지고 있는 재료 리스트: [%s].\n", ingredientsStr));
+
+        String prompt = """
+                현재 가지고 있는 재료 리스트: [%s].
+                """.formatted(ingredientsStr);
 
         if (excludedMenus != null && !excludedMenus.isEmpty()) {
             String bannedMenus = String.join(", ", excludedMenus);
-            promptBuilder.append("\n[중요 제약 사항]\n");
-            promptBuilder.append(String.format("사용자는 이미 다음 요리들을 추천받았습니다: **[%s]**\n", bannedMenus));
-            promptBuilder.append("1. 위 목록에 있는 요리와 이름이 같거나 매우 유사한 요리는 **절대 추천하지 마세요.**\n");
-            promptBuilder.append("2. 위 요리들과는 조리법(볶음/탕/찜 등)이나 식감이 다른 새로운 메뉴를 선정하세요.\n");
+            String constraints = """
+                    [중요 제약 사항]
+                    사용자는 이미 다음 요리들을 추천받았습니다: **[%s]**
+                    1. 위 목록에 있는 요리와 이름이 같거나 매우 유사한 요리는 **절대 추천하지 마세요.**
+                    2. 위 요리들과는 조리법(볶음/탕/찜 등)이나 식감이 다른 새로운 메뉴를 선정하세요.
+                    """.formatted(bannedMenus);
+            prompt += constraints;
         }
 
-        promptBuilder.append("\n위 조건을 만족하는 레시피 1개를 정해진 JSON 형식으로 답변해줘.");
-
-        return promptBuilder.toString();
+        return prompt + "\n위 조건을 만족하는 레시피 1개를 정해진 JSON 형식으로 답변해줘.";
     }
 }
